web/src/style/_buttons.scss
/** BUTTONS */
@import './colours';
@import './textstyles';
a.button {
  text-decoration: none;
  text-align: center;
  :focus {
    outline-color: $focus_highlight;
    box-shadow: inset 0 0 0 4px $focus_highlight;
    outline-offset: -5px;
  }
}

a.button:focus {
    outline-color: $focus_highlight;
    box-shadow: 0 0 0 4px $focus_highlight;
}

@mixin button-core {
	@include button;
	box-sizing: border-box;
	padding: 0.625em;
	background-color: $nhs_blue;
	border: none;
	border-radius: 0.125em;
	box-shadow: 0 0.125em 0 0 $dark_blue;
	margin-bottom: 1.250em;
	outline: none;
	transition: all ease 0.5s;
	white-space: normal;
	cursor: pointer;
  width: 100%;
    :focus {
      outline-color: $focus_highlight;
      box-shadow: inset 0 0 0 4px $focus_highlight;
      outline-offset: -5px;
    }
    &.desktopWeb {
      @include webButton;
    }
    &.desktopWebConfirmButton{
      @include webButton;
      margin-top: 1em;
    }

	&.tabFocus {
		outline-color: $focus_highlight !important;
		outline-width: 2px !important;
		outline-style: solid !important;
		-webkit-filter: brightness(120%);
		filter: brightness(120%);
	}

	&.green {
		background-color: $light_green;
		box-shadow: 0 0.125em 0 0 $dark_green;
      :focus {
        outline-color: $focus_highlight;
        box-shadow: inset 0 0 0 4px $focus_highlight;
        outline-offset: -5px;
      }
	}
	&.grey {
		background-color: $light_grey;
		box-shadow: 0 0.125em 0 0 $dark_grey;
	}
	&.white {
		background-color: $white;
		box-shadow: 0 0.125em 0 0 $light_grey;
		color: $dark_grey;
	}

	&:active {
		-webkit-filter: brightness(120%);
		filter: brightness(120%);
	}
	&.disabled {
		opacity: 0.5;
	}
}


/** BUTTONS */
button.button,
a.button {
	@include button-core;
  :focus {
    outline-color: $focus_highlight;
    box-shadow: inset 0 0 0 4px $focus_highlight;
    outline-offset: -5px;
  }
}

button.button-desktop,
a.button-desktop {
	@include button-core;
	width: auto;
	&:focus {
		box-shadow: inset 0 0 0 4px $focus_highlight;
	}
}

